# Iteracion

./: .replit  README.md  ejercicio11.py  ejercicio12.py  ejercicio6.py  ejercicio7.py  ejercicio8.py  ejercicio9.py  pyproject.toml
