[tool.poetry]
name = "iteracion"
version = "0.1.0"
description = ""
authors = ["joseluis031 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
